Add steam play time integration